--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;600&display=swap");
 @import url("https://use.typekit.net/mwf7moh.css");
 #header {
   position: fixed;
@@ -18,6 +18,7 @@
   color: white;
   background-color: #064242;
   height: 30px;
+  font-weight: 600;
 }
 #header #header_top .header_top_country span {
   margin-left: 5px;
@@ -39,6 +40,7 @@
   font-size: 12px;
   display: inline;
   color: white;
+  font-weight: 600;
 }
 #header #header_top .header_top_menuLeft .fa-angle-down {
   position: relative;
@@ -58,6 +60,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-weight: 600;
 }
 #header #header_bot #header_bot_menuMiddle .fa-angle-down {
   margin-left: 5px;
@@ -90,6 +93,7 @@
   margin-right: 10px;
   cursor: pointer;
   transition: all 0.5s ease;
+  font-weight: 600;
 }
 #header #header_bot .header_bot_menuleft #header_bot_findAMedicine span {
   position: absolute;
@@ -135,6 +139,7 @@
 li {
   text-decoration: none;
   cursor: pointer;
+  list-style-type: none;
 }
 
 a {
@@ -146,6 +151,7 @@ input {
   border: none;
   color: white;
   font-size: 17px;
+  font-weight: 600;
 }
 
 /****************************************/
@@ -195,6 +201,7 @@ input {
   padding-top: 40px;
   transition: all 1s ease;
   cursor: pointer;
+  font-weight: 600;
 }
 .sousSlider .sousSlider_L img {
   display: block;
@@ -219,6 +226,7 @@ input {
   text-align: center;
   transition: all 1s ease;
   cursor: pointer;
+  font-weight: 600;
 }
 .sousSlider .sousSlider_M img {
   display: block;
@@ -241,6 +249,7 @@ input {
   text-align: center;
   transition: all 1s ease;
   cursor: pointer;
+  font-weight: 600;
 }
 .sousSlider .sousSlider_R img {
   display: block;
@@ -310,6 +319,7 @@ input {
   display: block;
   margin-bottom: 30px;
   font-size: 14px;
+  font-weight: 600;
 }
 .bgGris_listCards .card img {
   width: 240px;
@@ -332,6 +342,7 @@ input {
   display: block;
   margin-left: 30px;
   font-size: 18px;
+  font-weight: 600;
 }
 .bgGris_listCards .card .card_bot a::after {
   content: "→";
@@ -387,6 +398,7 @@ input {
   margin-bottom: 20px;
   border-bottom: 1px solid #f6f6f6;
   color: #6c9a9b;
+  font-weight: 600;
 }
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt {
   margin-bottom: 20px;
@@ -408,9 +420,11 @@ input {
   display: block;
   font-size: 35px;
   margin-bottom: 20px;
+  font-weight: 600;
 }
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt .investor_card_containt_investText {
   color: #4c5f6a;
+  line-height: 25px;
 }
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt_update {
   color: #bec5c9;
@@ -420,6 +434,7 @@ input {
 }
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_bot a {
   font-size: 16px;
+  font-weight: 600;
 }
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_bot::after {
   content: "→";
@@ -498,6 +513,7 @@ input {
 .ourMission .ourMission_L {
   width: 22%;
   color: #005052;
+  font-weight: 600;
 }
 .ourMission .ourMission_L span {
   display: block;
@@ -528,6 +544,7 @@ input {
 .ourMission .ourMission_R p {
   font-size: 16px;
   line-height: 30px;
+  font-weight: 300;
 }
 
 /****************************************/
@@ -555,6 +572,7 @@ input {
   display: block;
   font-size: 50px;
   margin-bottom: 10px;
+  font-weight: 600;
 }
 .numberBot .ppl:before {
   position: relative;
@@ -587,29 +605,34 @@ input {
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  height: 85%;
+  height: 75%;
 }
-.footer .footerContaint .footerContaint_Card_Title {
+.footer .footerContaint .footerContaint_Card {
+  width: 30%;
+  height: 100%;
+}
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_Title {
   width: 125px;
   letter-spacing: 3px;
   font-size: 14px;
   margin-bottom: 15px;
+  font-weight: 600;
 }
-.footer .footerContaint .footerContaint_Card_Office {
-  width: 30%;
-  height: 200px;
-}
-.footer .footerContaint .footerContaint_Card_Office .footerContaint_Card_linkOffices {
-  line-height: 30px;
-  height: 150px;
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_link {
+  display: inline-block;
   justify-content: center;
   column-count: 2;
+  text-decoration: none;
 }
-.footer .footerContaint .footerContaint_Card_Tools {
-  width: 25%;
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_link a:hover {
+  text-decoration: underline;
+  font-weight: 300;
+}
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_link li {
+  margin-bottom: 15px;
 }
 .footer .footerContaint .footerContaint_Card_Medicine {
-  width: 25%;
+  width: 30%;
 }
 
 /*# sourceMappingURL=style.css.map */
