--- a/css/style.scss
+++ b/css/style.scss
@@ -451,7 +451,6 @@ input {
     }
   }
   .ppl:before {
-    position: relative;
     content: url("../images/human.JPG");
   }
   .target:before {
@@ -511,6 +510,39 @@ input {
 
     .footerContaint_Card_Medicine {
       width: 30%;
+      p {
+        margin: 20px 0 35px 0;
+        font-size: 17px;
+      }
+
+      li {
+        margin-bottom: 15px;
+        font-weight: 600;
+        a:hover {
+          text-decoration: underline;
+        }
+      }
     }
+  }
+}
+
+.copyright_Logo {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+  .by {
+    font-weight: 600;
+  }
+
+  input {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #096668;
+    background-color: transparent;
+    border-radius: 50px;
   }
 }
