--- a/css/_header.scss
+++ b/css/_header.scss
@@ -128,17 +128,17 @@
 }
 
 .menuCache {
-  display: none;
   position: absolute;
-  top: 30%;
-  height: 65px;
+  opacity: 0;
+  top: 0%;
+  height: 0px;
   width: 100%;
   background-color: $grisClair;
-  z-index: 5;
+  z-index: 1;
   border-bottom: 1px solid #d8d9da;
-  transition: all 1s ease;
+  transition: opacity 1s ease;
   li {
-    display: inline-block;
+    display: none;
     margin: 20px 20px 20px 75px;
     font-weight: 600;
     color: $vertFonce;
@@ -148,7 +148,12 @@
   }
 }
 .show {
-  display: block;
+  top: 30%;
+  opacity: 100;
+  height: 65px;
+  li {
+    display: inline-block;
+  }
 }
 .active {
   padding-bottom: 11px;
