--- a/css/style.css
+++ b/css/style.css
@@ -129,18 +129,18 @@
 }
 
 .menuCache {
-  display: none;
   position: absolute;
-  top: 30%;
-  height: 65px;
+  opacity: 0;
+  top: 0%;
+  height: 0px;
   width: 100%;
   background-color: #f9fbf9;
-  z-index: 5;
+  z-index: 1;
   border-bottom: 1px solid #d8d9da;
-  transition: all 1s ease;
+  transition: opacity 1s ease;
 }
 .menuCache li {
-  display: inline-block;
+  display: none;
   margin: 20px 20px 20px 75px;
   font-weight: 600;
   color: #005052;
@@ -150,7 +150,12 @@
 }
 
 .show {
-  display: block;
+  top: 30%;
+  opacity: 100;
+  height: 65px;
+}
+.show li {
+  display: inline-block;
 }
 
 .active {
