--- a/css/_header.scss
+++ b/css/_header.scss
@@ -35,6 +35,11 @@
         display: inline;
         color: white;
         font-weight: 600;
+        a {
+          color: white;
+          font-weight: 600;
+          font-size: 12px;
+        }
       }
       .fa-angle-down {
         position: relative;
@@ -127,16 +132,19 @@
   }
 }
 
+/****************************************** SOUS MENU ************************/
+
 .menuCache {
   position: absolute;
   opacity: 0;
-  top: 0%;
-  height: 0px;
+  visibility: hidden;
+  top: 30%;
+  height: 65px;
   width: 100%;
   background-color: $grisClair;
   z-index: 1;
   border-bottom: 1px solid #d8d9da;
-  transition: opacity 1s ease;
+  transition: opacity 0.5s ease;
   li {
     display: none;
     margin: 20px 20px 20px 75px;
@@ -147,10 +155,33 @@
     }
   }
 }
-.show {
+
+.menuCache_about {
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
   top: 30%;
+  left: 0;
+  height: 140px;
+  width: 100%;
+  background-color: $grisClair;
+  z-index: 1;
+  border-bottom: 1px solid #dad8d9;
+  transition: opacity 0.5s ease;
+  li {
+    display: none;
+    margin: 20px 20px 20px 75px;
+    font-weight: 600;
+    color: $vertFonce;
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+.show {
   opacity: 100;
-  height: 65px;
+  visibility: visible;
   li {
     display: inline-block;
   }
