--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@
   color: white;
   font-weight: 600;
 }
+#header #header_top .header_top_menuLeft li a {
+  color: white;
+  font-weight: 600;
+  font-size: 12px;
+}
 #header #header_top .header_top_menuLeft .fa-angle-down {
   position: relative;
   display: inline;
@@ -128,16 +133,18 @@
   cursor: pointer;
 }
 
+/****************************************** SOUS MENU ************************/
 .menuCache {
   position: absolute;
   opacity: 0;
-  top: 0%;
-  height: 0px;
+  visibility: hidden;
+  top: 30%;
+  height: 65px;
   width: 100%;
   background-color: #f9fbf9;
   z-index: 1;
   border-bottom: 1px solid #d8d9da;
-  transition: opacity 1s ease;
+  transition: opacity 0.5s ease;
 }
 .menuCache li {
   display: none;
@@ -149,10 +156,32 @@
   text-decoration: underline;
 }
 
-.show {
+.menuCache_about {
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
   top: 30%;
+  left: 0;
+  height: 140px;
+  width: 100%;
+  background-color: #f9fbf9;
+  z-index: 1;
+  border-bottom: 1px solid #dad8d9;
+  transition: opacity 0.5s ease;
+}
+.menuCache_about li {
+  display: none;
+  margin: 20px 20px 20px 75px;
+  font-weight: 600;
+  color: #005052;
+}
+.menuCache_about li a:hover {
+  text-decoration: underline;
+}
+
+.show {
   opacity: 100;
-  height: 65px;
+  visibility: visible;
 }
 .show li {
   display: inline-block;
@@ -161,6 +190,83 @@
 .active {
   padding-bottom: 11px;
   border-bottom: 3px solid #73b31a;
+}
+
+.footer {
+  background-color: #005052;
+  height: 450px;
+  color: white;
+}
+.footer a {
+  color: white;
+}
+.footer .footerContaint {
+  display: flex;
+  justify-content: space-between;
+  top: 50px;
+  width: 60%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  height: 75%;
+}
+.footer .footerContaint .footerContaint_Card {
+  width: 30%;
+  height: 100%;
+}
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_Title {
+  width: 125px;
+  letter-spacing: 3px;
+  font-size: 14px;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_link {
+  display: inline-block;
+  justify-content: center;
+  column-count: 2;
+  text-decoration: none;
+}
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_link a:hover {
+  text-decoration: underline;
+  font-weight: 300;
+}
+.footer .footerContaint .footerContaint_Card .footerContaint_Card_link li {
+  margin-bottom: 15px;
+}
+.footer .footerContaint .footerContaint_Card_Medicine {
+  width: 30%;
+}
+.footer .footerContaint .footerContaint_Card_Medicine p {
+  margin: 20px 0 35px 0;
+  font-size: 17px;
+}
+.footer .footerContaint .footerContaint_Card_Medicine li {
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+.footer .footerContaint .footerContaint_Card_Medicine li a:hover {
+  text-decoration: underline;
+}
+
+.copyright_Logo {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+}
+.copyright_Logo .by {
+  font-weight: 600;
+}
+.copyright_Logo input {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #096668;
+  background-color: transparent;
+  border-radius: 50px;
 }
 
 * {
@@ -623,81 +729,5 @@ input {
 }
 
 /****************************************/
-.footer {
-  background-color: #005052;
-  height: 450px;
-  color: white;
-}
-.footer a {
-  color: white;
-}
-.footer .footerContaint {
-  display: flex;
-  justify-content: space-between;
-  top: 50px;
-  width: 60%;
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  height: 75%;
-}
-.footer .footerContaint .footerContaint_Card {
-  width: 30%;
-  height: 100%;
-}
-.footer .footerContaint .footerContaint_Card .footerContaint_Card_Title {
-  width: 125px;
-  letter-spacing: 3px;
-  font-size: 14px;
-  margin-bottom: 15px;
-  font-weight: 600;
-}
-.footer .footerContaint .footerContaint_Card .footerContaint_Card_link {
-  display: inline-block;
-  justify-content: center;
-  column-count: 2;
-  text-decoration: none;
-}
-.footer .footerContaint .footerContaint_Card .footerContaint_Card_link a:hover {
-  text-decoration: underline;
-  font-weight: 300;
-}
-.footer .footerContaint .footerContaint_Card .footerContaint_Card_link li {
-  margin-bottom: 15px;
-}
-.footer .footerContaint .footerContaint_Card_Medicine {
-  width: 30%;
-}
-.footer .footerContaint .footerContaint_Card_Medicine p {
-  margin: 20px 0 35px 0;
-  font-size: 17px;
-}
-.footer .footerContaint .footerContaint_Card_Medicine li {
-  margin-bottom: 15px;
-  font-weight: 600;
-}
-.footer .footerContaint .footerContaint_Card_Medicine li a:hover {
-  text-decoration: underline;
-}
-
-.copyright_Logo {
-  display: flex;
-  position: relative;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-  width: 65%;
-}
-.copyright_Logo .by {
-  font-weight: 600;
-}
-.copyright_Logo input {
-  width: 40px;
-  height: 40px;
-  border: 1px solid #096668;
-  background-color: transparent;
-  border-radius: 50px;
-}
 
 /*# sourceMappingURL=style.css.map */
