--- a/css/_header.scss
+++ b/css/_header.scss
@@ -168,11 +168,21 @@
   z-index: 1;
   border-bottom: 1px solid #dad8d9;
   transition: opacity 0.5s ease;
+
+  ul {
+    display: flex;
+    justify-content: left;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+    flex-wrap: wrap;
+  }
   li {
     display: none;
     margin: 20px 20px 20px 75px;
     font-weight: 600;
     color: $vertFonce;
+    width: 250px;
     a:hover {
       text-decoration: underline;
     }
