--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -55,6 +55,12 @@
           text-decoration: underline;
         }
       }
+      span::before {
+        content: "\f1a3";
+        color: #8cdb1f;
+        display: inline-block;
+        margin-left: 1px;
+      }
     }
   }
 }
@@ -71,11 +77,17 @@
     font-weight: 600;
   }
 
-  input {
-    width: 40px;
-    height: 40px;
-    border: 1px solid #096668;
-    background-color: transparent;
+  .line {
+    border-top: 1px solid #0b7779;
+    width: 55%;
+  }
+
+  .twitter,
+  .vimeo,
+  .linkedin {
+    display: inline;
+    border: 1px solid #0b7779;
     border-radius: 50px;
+    padding: 13px;
   }
 }
