--- a/public/css/_footer.scss
+++ b/public/css/_footer.scss
@@ -7,9 +7,10 @@
   }
   .footerContaint {
     display: flex;
+    position: relative;
     justify-content: space-between;
     top: 50px;
-    width: 60%;
+    width: 68%;
     position: relative;
     margin-left: auto;
     margin-right: auto;
@@ -17,18 +18,13 @@
     .footerContaint_Card {
       width: 30%;
       height: 100%;
-      .footerContaint_Card_Title {
-        width: 125px;
-        letter-spacing: 3px;
-        font-size: 14px;
-        margin-bottom: 15px;
-        font-weight: 600;
-      }
       .footerContaint_Card_link {
         display: inline-block;
         justify-content: center;
         column-count: 2;
         text-decoration: none;
+        margin-left: 50px;
+        margin-top: 20px;
         a {
           &:hover {
             text-decoration: underline;
@@ -40,26 +36,39 @@
         }
       }
     }
-
+    .footerContaint_Card_Title {
+      position: relative;
+      display: inline;
+      width: 125px;
+      letter-spacing: 3px;
+      font-size: 14px;
+      margin-bottom: 15px;
+      font-weight: 600;
+      img {
+        float: left;
+        margin-right: 10px;
+      }
+      span {
+        display: inline-block;
+        position: relative;
+        width: 150px;
+        padding-top: 8px;
+      }
+    }
     .footerContaint_Card_Medicine {
-      width: 30%;
+      width: 35%;
       p {
-        margin: 20px 0 35px 0;
+        margin: 20px 0 35px 58px;
         font-size: 17px;
       }
 
       li {
+        margin-left: 58px;
         margin-bottom: 15px;
         font-weight: 600;
         a:hover {
           text-decoration: underline;
         }
-      }
-      span::before {
-        content: "\f1a3";
-        color: #8cdb1f;
-        display: inline-block;
-        margin-left: 1px;
       }
     }
   }
@@ -72,7 +81,8 @@
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
-  width: 65%;
+  width: 68%;
+  margin-top: 40px;
   .by {
     font-weight: 600;
   }
@@ -89,5 +99,9 @@
     border: 1px solid #0b7779;
     border-radius: 50px;
     padding: 13px;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: #084344;
+    }
   }
 }
