--- a/public/css/_header.scss
+++ b/public/css/_header.scss
@@ -71,9 +71,9 @@
         padding-right: 40px;
         a {
           color: #646668;
-          padding-bottom: 41px;
+          padding-bottom: 42px;
           &:hover {
-            border-bottom: 3px solid $vertClair;
+            box-shadow: 0px -3px 0px $vertClair inset;
           }
         }
       }
@@ -317,6 +317,33 @@
   }
 }
 
+.menuCache_howCanWeHelp {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  margin-top: 3px;
+  width: 100%;
+  height: 100px;
+  background-color: #fff;
+  top: 141px;
+  z-index: 4;
+  transition: all 0.5s ease;
+  ul {
+    display: flex;
+    text-align: center;
+    justify-content: first baseline;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    li {
+      margin: 40px 50px 40px 50px;
+      font-weight: 600;
+      a:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
 .show {
   opacity: 100;
   visibility: visible;
@@ -326,5 +353,10 @@
 }
 .actif {
   padding-bottom: 11px;
-  border-bottom: 3px solid #73b31a;
+  border-bottom: 3px solid $vertClair;
+}
+
+/* Pour le menu du header a coté de clinigen */
+.actifSousMenu {
+  box-shadow: 0px -3px 0px $vertClair inset;
 }
