--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,10 +78,10 @@
 }
 #header #header_bot #header_bot_menuMiddle li a {
   color: #646668;
-  padding-bottom: 41px;
+  padding-bottom: 42px;
 }
 #header #header_bot #header_bot_menuMiddle li a:hover {
-  border-bottom: 3px solid #8cdb1f;
+  box-shadow: 0px -3px 0px #8cdb1f inset;
 }
 #header #header_bot .header_bot_menuleft {
   height: 100%;
@@ -317,6 +317,34 @@
   margin: 10px 0 3px 0;
 }
 
+.menuCache_howCanWeHelp {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  margin-top: 3px;
+  width: 100%;
+  height: 100px;
+  background-color: #fff;
+  top: 141px;
+  z-index: 4;
+  transition: all 0.5s ease;
+}
+.menuCache_howCanWeHelp ul {
+  display: flex;
+  text-align: center;
+  justify-content: first baseline;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.menuCache_howCanWeHelp ul li {
+  margin: 40px 50px 40px 50px;
+  font-weight: 600;
+}
+.menuCache_howCanWeHelp ul li a:hover {
+  text-decoration: underline;
+}
+
 .show {
   opacity: 100;
   visibility: visible;
@@ -327,7 +355,12 @@
 
 .actif {
   padding-bottom: 11px;
-  border-bottom: 3px solid #73b31a;
+  border-bottom: 3px solid #8cdb1f;
+}
+
+/* Pour le menu du header a coté de clinigen */
+.actifSousMenu {
+  box-shadow: 0px -3px 0px #8cdb1f inset;
 }
 
 .footer {
