--- a/public/css/style.css
+++ b/public/css/style.css
@@ -345,6 +345,44 @@
   text-decoration: underline;
 }
 
+.menuCache_ProductsServices {
+  opacity: 0;
+  visibility: hidden;
+  position: fixed;
+  margin-top: 3px;
+  width: 100%;
+  height: 350px;
+  background-color: #fff;
+  top: 141px;
+  z-index: 4;
+  transition: all 0.5s ease;
+  display: flex;
+}
+.menuCache_ProductsServices .menuCache_ProductsServices_L {
+  position: grid;
+  display: flex;
+  border: 1px solid red;
+  width: 70%;
+}
+.menuCache_ProductsServices .menuCache_ProductsServices_R {
+  width: 30%;
+  border: 1px solid blue;
+}
+.menuCache_ProductsServices ul {
+  display: flex;
+  text-align: center;
+  justify-content: first baseline;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.menuCache_ProductsServices ul li {
+  font-weight: 600;
+}
+.menuCache_ProductsServices ul li a:hover {
+  text-decoration: underline;
+}
+
 .show {
   opacity: 100;
   visibility: visible;
