--- a/public/css/style.css
+++ b/public/css/style.css
@@ -834,6 +834,16 @@ input {
   color: #6c9a9b;
   font-weight: 600;
 }
+.containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt_SharePrice p {
+  font-family: League;
+  font-weight: 400;
+  font-size: 60px;
+}
+.containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt_SharePrice span {
+  font-family: League;
+  font-weight: 400;
+  font-size: 40px;
+}
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt {
   margin-bottom: 20px;
   padding-bottom: 20px;
@@ -854,7 +864,10 @@ input {
   display: block;
   font-size: 35px;
   margin-bottom: 20px;
-  font-weight: 600;
+  font-family: League;
+  font-size: 60px;
+  line-height: 50px;
+  font-weight: 400;
 }
 .containt_investor .containt_investor_listCard .containt_investor_card .investor_card_containt .investor_card_containt_investText {
   color: #4c5f6a;
@@ -911,10 +924,14 @@ input {
   color: #6ba717;
 }
 .video .containerVideo h2 {
-  font-size: 50px;
   margin-bottom: 15px;
   margin-top: 5px;
-  letter-spacing: -2px;
+  font-weight: 400;
+  font-size: 80px;
+  font-family: League;
+  margin-bottom: 10px;
+  width: 500px;
+  line-height: 70px;
 }
 .video .containerVideo .containerVideo_Text {
   color: #bec5c9;
@@ -955,8 +972,10 @@ input {
   margin-bottom: 5px;
 }
 .ourMission .ourMission_L p {
-  font-size: 40px;
-  letter-spacing: -3px;
+  font-family: League;
+  font-size: 60px;
+  line-height: 50px;
+  font-weight: 400;
 }
 .ourMission .ourMission_L input {
   margin-top: 20px;
